--- a/package.json
+++ b/package.json
@@ -4,5 +4,15 @@
   "description": "Fetch api wrapper",
   "main": "index.js",
   "author": "Peter Wildberger",
-  "license": "MIT"
+  "license": "MIT",
+  "typings": "./lib/dug.d.ts",
+  "devDependencies": {
+    "@types/node": "^9.6.8",
+    "awesome-typescript-loader": "^5.2.1",
+    "html-webpack-plugin": "^3.2.0",
+    "typescript": "^2.8.3",
+    "webpack": "^4.25.1",
+    "webpack-bundle-analyzer": "^3.0.3",
+    "webpack-cli": "^3.1.2"
+  }
 }
