--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "devDependencies": {
     "@types/node": "^9.6.8",
     "awesome-typescript-loader": "^5.2.1",
-    "html-webpack-plugin": "^3.2.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
+    "mocha": "^6.0.2",
     "typescript": "^2.8.3",
     "webpack": "^4.25.1",
     "webpack-bundle-analyzer": "^3.0.3",
